# operator

./: Cargo.toml  README.md  moodle-cr.yaml
crds/: moodle-crd.yaml
src/: error.rs  main.rs
src/crds/: crd.rs
src/reconciller/: controller.rs  create_or_update_rs.rs  create_pv_for_rs.rs  mod.rs  reconcille_moodle.rs  update_status_moodle.rs
