[package]
name = "operator"
version = "0.1.0"
edition = "2021"


[dependencies]
kube = { version = "1.1.0", features = ["runtime", "derive", "admission", "rustls-tls", "ws", "socks5", "runtime"] }
kube-runtime = "1.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.12"
tracing = "0.1.41"
k8s-openapi = { version = "0.25.0", features = ["latest", "schemars"] }
schemars = "0.8"
features = "0.10.0"
tracing-subscriber = "0.3.19"
futures = "0.3.31"
anyhow = "1.0.98"
kube-derive = "1.1.0"

[target.'cfg(target_arch = "x86_64")']
rustflags = ["-C", "target-cpu=native", "-C", "target-feature=+avx2,+fma"]
